--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-confetti": "^6.0.1",
     "react-dom": "^16.14.0",
     "react-google-login": "^5.2.1",
+    "react-navigation": "^4.4.4",
     "react-router-dom": "^5.2.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.1",
